--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -815,68 +815,11 @@
   </block>
 </template>
 
-<!--匹配推荐 + 精选  -->
-<template name="selectProject">
-  <block wx:for="{{list}}" wx:key="{{index}}">
-    <view class="t-outBox" wx:if="{{item.handle_status != 2 }}">
-      <view class="t-redPoint" wx:if="{{type != 2}}" wx:if="{{item.message_status ==0 }}"></view>
-      <view class="t-insideBox t-project-detailm">
-        <view data-project="{{item.project_id}}" catchtap="projectDetail">
-          <view class="flex">
-            <view class="t-describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
-            <image src="/img/img-dujiaqianyue1@2x.png" class="t-projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
-            <image src="/img/img-feidujiaqianyue@2x.png" class="t-projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image>
-          </view>
-          <view class="t-allIndustry" style="text-align:left">
-            <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
-              <label class="{{industry.is_match == 1 ? 't-hightLight':t-'noLight'}}" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label>
-              <label class="{{industry.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
-            </block>
-          </view>
-          <view class="t-allProjectDetail flex" wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
-            <view class="{{item.pro_scale.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}}</view>
-            <view class="{{item.pro_finance_stock_after.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{item.pro_finance_stock_after != ''}}">{{item.pro_finance_stock_after}}%</view>
-            <view class="{{item.pro_stage.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{item.pro_stage != ''}}">{{item.pro_stage.stage_name}}</view>
-            <view class="{{item.pro_area.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{item.pro_area != ''}}">{{item.pro_area.area_title}}</view>
-          </view>
-          <view class="t-otherInfo flex">
-            <view>
-              <image src="{{item.user.investor_logo_url}}" class="t-others_pic" wx:if="{{item.user.investor_logo_url}}" />
-              <view class="t-user_image flex " wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
-            </view>
-            <view>
-              <view class="t-userInfo flex">
-                <view class="t-userName">{{item.user.user_name}}</view>
-                <view class="t-userCareer">{{item.user.user_career}}</view>
-                <view class="t-userCompany" style="text-align:left">{{item.user.user_company}}</view>
-              </view>
-            </view>
-          </view>
-        </view>
-        <!--匹配推荐  -->
-        <view class="t-projectInfo flex" wx:if="{{type == 2}}">
-          <view class="t-seeNum">{{item.view_count}}人看过项目</view>
-          <view class="t-interest flex">
-            <view class="t-appling" wx:if="{{item.relationship_button == 0}}">申请中</view>
-            <view class="t-toAccreditation project-applicationm" wx:if="{{item.relationship_button == 4}}" data-project="{{item.project_id}}" catchtap="matchApply" data-content="{{0}}">申请查看</view>
-            <view class="t-refuseToRead" wx:if="{{item.relationship_button == 1}}">同意查看</view>
-            <view class="t-refuseToRead t-readed" wx:if="{{item.relationship_button == 3}}">推送给我</view>
-            <view class="t-toAccreditation" wx:if="{{item.relationship_button == 2}}" data-project="{{item.project_id}}" data-content="{{1}}" catchtap="matchApply">重新申请</view>
-          </view>
-        </view>
-        <view class="t-classname" wx:if="{{type == 3}}"></view>
-      </view>
-      <view class="t-time">{{item.created_at}}</view>
-    </view>
-  </block>
-  <view class="t-highBox"></view>
-</template>
-
-<!--创建项目+到电脑端  -->
+<!-- 创建项目引导模块  -->
 <template name="createProject">
   <view class="floatBtn">
     <view class="t-accreditation flex">
-      <view>{{text}}</view>
+      <view>提交项目,加速融资</view>
       <view class="t-btnToAccreditation" bindtap="toCreateProject">创建项目</view>
       <view class="t-goPc" bindtap='createProjectPc'>电脑上创建</view>
     </view>
@@ -947,6 +890,63 @@
       </view>
     </view>
   </view>
+</template>
+
+<!--精选项目卡片 -->
+<template name="selectProject">
+  <block wx:for="{{list}}" wx:key="{{index}}">
+    <view class="t-outBox" wx:if="{{item.handle_status != 2 }}">
+      <view class="t-redPoint" wx:if="{{type != 2}}" wx:if="{{item.message_status ==0 }}"></view>
+      <view class="t-insideBox t-project-detailm">
+        <view data-project="{{item.project_id}}" catchtap="projectDetail">
+          <view class="flex">
+            <view class="t-describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
+            <image src="/img/img-dujiaqianyue1@2x.png" class="t-projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+            <image src="/img/img-feidujiaqianyue@2x.png" class="t-projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image>
+          </view>
+          <view class="t-allIndustry" style="text-align:left">
+            <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
+              <label class="{{industry.is_match == 1 ? 't-hightLight':t-'noLight'}}" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label>
+              <label class="{{industry.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
+            </block>
+          </view>
+          <view class="t-allProjectDetail flex" wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+            <view class="{{item.pro_scale.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}}</view>
+            <view class="{{item.pro_finance_stock_after.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{item.pro_finance_stock_after != ''}}">{{item.pro_finance_stock_after}}%</view>
+            <view class="{{item.pro_stage.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{item.pro_stage != ''}}">{{item.pro_stage.stage_name}}</view>
+            <view class="{{item.pro_area.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{item.pro_area != ''}}">{{item.pro_area.area_title}}</view>
+          </view>
+          <view class="t-otherInfo flex">
+            <view>
+              <image src="{{item.user.investor_logo_url}}" class="t-others_pic" wx:if="{{item.user.investor_logo_url}}" />
+              <view class="t-user_image flex " wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
+            </view>
+            <view>
+              <view class="t-userInfo flex">
+                <view class="t-userName">{{item.user.user_name}}</view>
+                <view class="t-userCareer">{{item.user.user_career}}</view>
+                <view class="t-userCompany" style="text-align:left">{{item.user.user_company}}</view>
+              </view>
+            </view>
+          </view>
+        </view>
+        <!--匹配推荐  -->
+        <view class="t-projectInfo flex" wx:if="{{type == 2}}">
+          <view class="t-seeNum">{{item.view_count}}人看过项目</view>
+          <view class="t-interest flex">
+            <view class="t-appling" wx:if="{{item.relationship_button == 0}}">申请中</view>
+            <view class="t-toAccreditation project-applicationm" wx:if="{{item.relationship_button == 4}}" data-project="{{item.project_id}}" catchtap="matchApply" data-content="{{0}}">申请查看</view>
+            <view class="t-refuseToRead" wx:if="{{item.relationship_button == 1}}">同意查看</view>
+            <view class="t-refuseToRead t-readed" wx:if="{{item.relationship_button == 3}}">推送给我</view>
+            <view class="t-toAccreditation" wx:if="{{item.relationship_button == 2}}" data-project="{{item.project_id}}" data-content="{{1}}" catchtap="matchApply">重新申请</view>
+          </view>
+        </view>
+        <view class="t-classname" wx:if="{{type == 3}}"></view>
+      </view>
+      <view class="t-time">{{item.created_at}}</view>
+    </view>
+  </block>
+  <view class="t-highBox"></view>
 </template>
 
 <!--投资人卡片  -->
