--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -574,8 +574,8 @@
         <view class="projectInfo flex" wx:if="{{type == 0}}">
           <view class="seeNum">{{item.view_count}}人看过项目</view>
           <view class="interest flex">
-            <view class="btnNoInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}">没兴趣</view>
-            <view class="btnHaveInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}">感兴趣</view>
+            <view class="btnNoInterest" catchtap="noInteresting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}" data-project="{{item.project_id}}">没兴趣</view>
+            <view class="btnHaveInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}" data-project="{{item.project_id}}">联系项目方</view>
             <view class="haveInterest" wx:if="{{item.handle_status == 1}}">感兴趣</view>
           </view>
         </view>
