--- a/Weitianshi/pages/message/potentialProject/potentialProject.wxml
+++ b/Weitianshi/pages/message/potentialProject/potentialProject.wxml
@@ -1,7 +1,7 @@
 <import src="/pages/Template/Template.wxml" />
 <view class="swiper-tab">
 
-  <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}"  data-current="0" bindtap="swichNav">推送给我的项目</view>
+  <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">推送给我的项目</view>
 
   <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">我申请查看的项目</view>
 
@@ -13,7 +13,7 @@
     <scroll-view scroll-y="true" bindscrolltolower="pushMore" scroll-top="{{scroll}}">
       <template is="allNumber" data="{{count:count1,text:'推送给我的项目'}}"></template>
       <template is="personModal" data="{{list:pushToList,type:0}}"></template>
-       <template is="hasNothing" data="{{emptyNumber:pushToList}}"></template>
+      <template is="hasNothing" data="{{emptyNumber:pushToList}}"></template>
     </scroll-view>
   </swiper-item>
   <!--我申请查看的项目  -->
@@ -34,4 +34,16 @@
   </swiper-item>
 </swiper>
 <!--没有更多-->
-  <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+<view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+<!--模态框  -->
+<view class="modalBox" hidden="{{modalBox==0}}">
+  <view class="classname" bindtap="closeModal">
+    <image src="/img/icon-guanbi@2x.png" class="close"></image>
+  </view>
+  <view class="contactModalBox">
+    <view class="modalTitle">联系项目方</view>
+    <textarea class="modalContent" placeholder="请简要描述您的约谈需求" bindinput="contentProject" />
+    <view class="modalTips">微天使将为您联系项目方并安排约谈或添加FA哥微信：weitianshicn</view>
+    <view class="btn" bindtap="yesBtn">确定</view>
+  </view>
+</view>
