--- a/Weitianshi/pages/message/pushProject/pushProject.wxml
+++ b/Weitianshi/pages/message/pushProject/pushProject.wxml
@@ -49,8 +49,8 @@
               <view class="projectInfo flex">
                 <view class="seeNum">{{item.view_count}}人看过项目</view>
                 <view class="interest flex">
-                  <view class="btnNoInterest not-interestedm" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}">没兴趣</view>
-                  <view class="btnHaveInterest interestedm" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}">感兴趣</view>
+                  <view class="btnNoInterest not-interestedm" catchtap="noInteresting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}" data-project="{{item.project_id}}">没兴趣</view>
+                  <view class="btnHaveInterest interestedm" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}" data-project="{{item.project_id}}">联系项目方</view>
                   <view class="haveInterest" wx:if="{{item.handle_status == 1}}">感兴趣</view>
                 </view>
               </view>
@@ -74,3 +74,15 @@
 </swiper>
 <!--没有更多-->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+<!--模态框  -->
+<view class="modalBox" hidden="{{modalBox==0}}">
+<view class="classname" bindtap="closeModal">
+<image src="/img/icon-guanbi@2x.png" class="close"></image>
+</view>
+  <view class="contactModalBox">
+    <view class="modalTitle">联系项目方</view>
+    <textarea class="modalContent"  placeholder="请简要描述您的约谈需求" bindinput="contentProject"/>
+    <view class="modalTips">微天使将为您联系项目方并安排约谈或添加FA哥微信：weitianshicn</view>
+    <view class="btn"  bindtap="yesBtn">确定</view>
+  </view>
+</view>
