--- a/Weitianshi/pages/my/investCase/investCase.wxml
+++ b/Weitianshi/pages/my/investCase/investCase.wxml
@@ -12,5 +12,8 @@
 </scroll-view>
 
 <view style="height:98rpx;"></view>
-<!--按钮一号-->
-<template is="buttonOne" data="{{...buttonOne}}"></template>
+<!-- 按钮一号 -->   
+<!-- <template is="buttonOne" data="{{...buttonOne}}"></template> -->
+ <template is="buttonOne" data="{{text:'添加案例',btnName:'buttonOne'}}"></template>
+
+
