--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -828,12 +828,15 @@
 
 <!-- 分享引导模块 -->
 <template name="topBlock">
-  <image src="https://weitianshi-2017.oss-cn-shanghai.aliyuncs.com/image/20170904/img-banner.png" class="t-contactsPic"></image>
-  <view class="t-blockContent">这里是ldkjfklasdjf sdlkjf sld 文案</view>
-  <view class="flex t-btnBox">
-    <view class="t-faBtn">fa</view>
-    <view class="t-investorBtn">投资方</view>
-    <view class="t-startupBtn">创业者</view>
+  <view id='topBlock'>
+    <view class="t-contactsPic">
+      <view class="t-blockContent">这里是ldkjfklasdjf sdlkjf sld 文案</view>
+      <view class="flex t-btnBox">
+        <view class="t-faBtn">fa</view>
+        <view class="t-investorBtn">投资方</view>
+        <view class="t-startupBtn">创业者</view>
+      </view>
+    </view>
   </view>
 </template>
 
