--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -954,44 +954,41 @@
 
 <!--投资人卡片  -->
 <template name="InvestorCard">
-  <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
+  <view class="t-outsideBox" data-id="{{item.investor_id}}" catchtap="userDetail">
     <view class="t-applyMyProject t-contacts-detailm">
       <view class="t-introduceBox flex">
-        <view class="t-userName">{{item.user_name}}</view>
-        <view class="t-userPosition">{{item.user_career}}</view>
-        <view class="t-userPart flex" wx:if="{{user.authentication[0].group_title}}">
-          <image src="/img/icon-renzheng@2x.png" class="renzheng"></image>
-          <view class="t-userPart1">{{user.authentication[0].group_title}}</view>
+        <view class="t-userName">{{item.investor_name}}</view>
+        <view class="t-userPosition">{{item.investor_career}}</view>
+        <view class="t-userPart flex" wx:if="{{item.authentication[0].group_title}}">
+          <image src="/img/icon-renzheng@2x.png" class="t-renzheng"></image>
+          <view class="t-userPart1">{{item.authentication[0].group_title}}</view>
         </view>
-        <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
-        <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
+        <view class="t-user_text" wx:if="{{item.investor_logo_text}}">{{item.investor_logo_text}}</view>
+        <image src="{{item.investor_logo_url}}" class="t-userPic" wx:if="{{item.investor_logo_url}}"></image>
       </view>
-      <view class="t-userCompany">{{item.user_company}}</view>
+      <view class="t-userCompany">{{item.investor_company}}</view>
       <view class="t-record">{{item.active_status}}</view>
-      <view class="t-roundGroupPush flex" wx:if="{{item.resource.res_give != ''}}">
-        <view class="t-roundGroupTitle">提供资源：</view>
+      <view class="t-roundGroupPush flex" wx:if="{{item.industry_tag.length != 0}}">
+        <view class="t-roundGroupTitle">投资领域：</view>
         <view class="t-roundGroupContent">
-          <block wx:for="{{item.resource.res_give}}" wx:key="{{item.resource.res_give.index}}" wx:for-item='userGive'>
-            <label class="{{userGive.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index < item.resource.res_give.length-1}}">
-              {{userGive.resource_name}}、
+          <block wx:for="{{item.industry_tag}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
+            <label wx:if="{{index < item.industry_tag.length-1}}">
+              {{industryItem.industry_name}}、
             </label>
-            <label class="{{userGive.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index ==  item.resource.res_give.length-1}}">
-              {{userGive.resource_name}}
+            <label wx:if="{{index ==  item.industry_tag.length-1}}">
+              {{industryItem.industry_name}}
             </label>
           </block>
         </view>
       </view>
-      <view class="t-roundGroupPush flex" wx:if="{{item.resource.res_find != ''}}">
-        <view class="t-roundGroupTitle">寻求资源：</view>
+      <view class="t-roundGroupPush flex" wx:if="{{item.stage_tag.length != 0}}">
+        <view class="t-roundGroupTitle">投资轮次：</view>
         <view class="t-roundGroupContent">
-          <block wx:for="{{item.resource.res_find}}" wx:key="{{item.resource.res_find.index}}" wx:for-item='userFind'>
-            <label class="{{userFind.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index < item.resource.res_find.length-1}}">{{userFind.resource_name}}、</label>
-            <label class="{{userFind.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index ==item.resource.res_find.length-1}}">{{userFind.resource_name}}</label>
+          <block wx:for="{{item.stage_tag}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
+            <label wx:if="{{index < item.stage_tag.length-1}}">{{stageItem.stage_name}}、</label>
+            <label wx:if="{{index ==item.stage_tag.length-1}}">{{stageItem.stage_name}}</label>
           </block>
         </view>
-      </view>
-      <view>
-        <view class="t-describe" wx:if="{{item.resource.res_desc != null}}">{{item.resource.res_desc}}</view>
       </view>
     </view>
   </view>
